aligning userinfo so state is a fixed distance from right side.

--- a/source/style.css
+++ b/source/style.css
@@ -28,7 +28,8 @@ Styling Fixes for Matches Search Page
 .pretty_okc .match_card_wrapper .match_card_text .profile_info .userinfo {
   font-size: 12px;
   line-height: 14px;
-  padding: 0px 5px;
+  padding: 0px 5px 0px 0px;
+  text-align: right;  
 }
 
 /* Hide Reply Frequency and Username */
@@ -45,8 +46,10 @@ Styling Fixes for Matches Search Page
   font-weight: bold;
   height: 25px;
   left: auto;
+  letter-spacing: 1px;
   overflow: hidden;
-  right: -118px;
+  padding-left: 3px;
+  right: -113px;
   text-align: left;
   /*text-shadow: 2px 2px 0px #000;
   -moz-text-shadow: 2px 2px 0px #000;
